<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/minha_lista_de_compras"
            android:textSize="26dp" />

        <EditText
            android:id="@+id/editItemName"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/nome_do_item"
            android:inputType="text" />

        <EditText
            android:id="@+id/editItemPrice"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/preco_do_item"
            android:inputType="text" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/adicionar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="109dp"
            android:layout_height="48dp"
            android:text="Limpar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/quantidade_de_itens" />

            <TextView
                android:id="@+id/textViewQuantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valor da lista:" />

            <TextView
                android:id="@+id/textViewValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="R$ 0,00" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="409dp"
            android:layout_height="339dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>